# argless

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  single_include_header.yml  tests.yml
Example/src/: main.cpp
example/: CMakeLists.txt
example/src/: main.cpp
include/argless/: argless.hpp  helper.hpp  parser.hpp  str.hpp
include/argless/parsers/: dynamic_array.hpp
module_src/: argless.core.cppm  argless.cppm
single_include/: argless.hpp
tools/: generate_header.py
